WIP Ongoing Campaign header

--- a/src/components/Activities/ActivitiesOverview.css
+++ b/src/components/Activities/ActivitiesOverview.css
@@ -3,3 +3,11 @@
   flex-wrap: wrap;
   justify-content: center;
 }
+
+h1 {
+  text-align: center;
+}
+
+.full-width-description {
+  margin: 0 5vw;
+}
