--- a/src/App.css
+++ b/src/App.css
@@ -12,11 +12,11 @@
     --red-color: #c07578;
     --blue-color: #3161a8;
     --purple-color: #9194b0;
+    --dark-color: #000000;
     --text-color: #000;
     --text-color-light: #fff;
     --background-color: #fff;
     --brand-color: #00458b;
-    --brand-color-light: #aae3c6;
     --page-header-background: #f5f5f5;
     --page-header-border: #778492;
     --activity-background: #DAE3E7;
@@ -41,7 +41,6 @@ h6,
 p,
 blockquote,
 pre,
-hr,
 dl,
 dd,
 ol,
@@ -276,4 +275,29 @@ pre code {
 
 .icon svg path {
     fill: var(--grey-color);
+}
+
+/*
+ * Others
+ */
+
+ .full-width {
+    margin: 0 5vw;
+}
+
+.button {
+    padding: 10px 20px;
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+.button-white {
+    text-color: var(--brand-color);
+    background-color: white;
+}
+
+.button-transparent {
+    text-color: var(--dark-color);
+    background-color: transparent;
+    border: 1px var(--dark-color) solid;
 }
