--- a/src/App.css
+++ b/src/App.css
@@ -301,3 +301,8 @@ pre code {
     background-color: transparent;
     border: 1px var(--dark-color) solid;
 }
+
+.content-center {
+    display: flex;
+    justify-content: center;
+}
