--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,12 +1,12 @@
 footer {
   color: var(--text-color-light);
   background-color: #161616;
-  padding: 40px 0;
+  margin: 0;
+  padding: 2rem 0;
   font-size: 0.9em;
   line-height: 1.3;
   width: 100%;
-  margin: 0;
-  padding: 2rem 0;
+  clear: both;
 }
 
 footer .icons {
@@ -114,7 +114,7 @@ footer a:hover {
     margin: 15px;
     text-align: center;
   }
-  
+
   .languages {
     padding-top: 1.25rem;
     border-top: 1px solid #666;
