--- a/src/components/Activities/ActivityDetail.css
+++ b/src/components/Activities/ActivityDetail.css
@@ -58,6 +58,15 @@
   max-width: 10vw;
 }
 
+.activity-page table th,
+.activity-page table td {
+  padding-right: 5vw;
+}
+
+.activity-page table thead tr {
+  border-bottom: 1px solid var(--brand-color);
+}
+
 @media all and (max-width: 767px) {
   .activity-page .post-header-image {
     max-width: 75vw;
