Use better colors

--- a/src/App.css
+++ b/src/App.css
@@ -8,9 +8,9 @@
     --grey-color: #828282;
     --grey-color-light: #dcdcdc;
     --grey-color-dark: #4f4f4f;
-    --green-color: #6d7c23;
-    --red-color: #c07578;
-    --blue-color: #3161a8;
+    --green-color: #005e5e;
+    --red-color: #ff4f5e;
+    --blue-color: #00ffff;
     --purple-color: #9194b0;
     --dark-color: #000000;
     --text-color: #000;
