--- a/src/components/NewsletterForm.css
+++ b/src/components/NewsletterForm.css
@@ -1,63 +1,38 @@
-.newsletter h1 {
-  margin-top: 10vh;
+.newsletter__privacy-policy {
+
 }
 
-.newsletter form {
+.newsletter__email {
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
 }
-
-.newsletter .form_group label {
-  font-weight: 400;
-  flex-grow: 1;
-}
-
-.newsletter .form_group {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  width: 50vw;
-  padding-top: 5vh;
-}
-
-.newsletter #email {
+.newsletter__email .form_input{
   flex-grow: 2;
+  padding: 0 20px;
 }
 
-.newsletter .newsletter_submit {
-  padding-top: 5vh;
-}
-
-.newsletter .newsletter_thanks {
+.newsletter__thanks {
   display: none;
 }
 
-.newsletter .newsletter_errors {
+.newsletter__errors {
   color: var(--red-color);
 }
 
-.newsletter .newsletter_errors ul {
+.newsletter__errors ul {
   list-style-type: none;
 }
 
-.newsletter #newsletter_privacy {
-  text-align: justify;
+.newsletter .newsletter__subscribe {
+  font-size: 26px;
+  line-height: 24px;
+  font-weight: normal;
+}
+.newsletter__subscribe-icon {
+  padding-left: 10px;
 }
 
-.newsletter #newsletter_privacy input {
-  margin-right: 2vw;
+.newsletter__privacy {
 }
 
-@media all and (max-width: 767px) {
-  .newsletter .form_group  {
-    flex-direction: column;
-    width: 90vw;
-  }
-
-  #newsletter_privacy {
-    display: flex;
-    flex-direction: row;
-  }
+.newsletter__privacy input {
 }
