--- a/src/title.css
+++ b/src/title.css
@@ -2,12 +2,40 @@
   font-family: var(--alternate-font-family);
   font-weight: var(--title-font-weight);
   font-size: var(--title-font-size);
-  line-height: var(--base-line-height);
+  line-height: 1.1;
   color: var(--dark-blue-grey-color);
   letter-spacing: 0.3px;
+  margin-bottom: 1.5rem;
+  margin-top: 3.5rem;
+}
+
+.title--extra-extra-large {
+  font-size: var(--title-extra-extra-large-font-size);
+  line-height: 1.2;
+  letter-spacing: 0.18px;
+  margin-bottom: 1rem;
+}
+
+
+.title--extra-large {
+  font-size: var(--title-extra-large-font-size);
+  line-height: 1.2;
+  letter-spacing: 0.18px;
+  margin-bottom: 1rem;
+  margin-top: 0;
+}
+
+.title--large {
+  font-size: var(--title-large-font-size);
+  line-height: 1.2;
+  letter-spacing: 0.15px;
+  margin-bottom: 1rem;
+  margin-top: 0;
 }
 
 .title--medium {
   font-size: var(--title-medium-font-size);
+  line-height: 1;
   letter-spacing: -0.1px;
+  margin-top: 0;
 }
