--- a/src/App.css
+++ b/src/App.css
@@ -1,37 +1,58 @@
 :root {
-    --base-font-family: 'Open Sans', sans-serif;
-    --base-font-size: 16px;
-    --base-font-weight: 300;
-    --alternate-font-family: 'ZillaSlab', sans-serif;
-    --title-font-size: calc(var(--base-font-size) * 4.25); // 65px
-    --title-medium-font-size: calc(var(--base-font-size) * 1.625); // 26px
-    --title-font-weight: 500;
-    --small-font-size: calc(var(--base-font-size) * 0.875); // 14px
-    --base-line-height: 1.5;
-    --spacing-unit: 30px;
-    --grey-color: #828282;
-    --grey-color-very-light: #f0f0f0;
-    --grey-color-light: #dcdcdc;
-    --grey-color-dark: #4f4f4f;
-    --green-color: #005e5e;
-    --red-color: #ff4f5e;
-    --blue-color: #00ffff;
-    --purple-color: #9194b0;
-    --dark-color: #000000;
-    --text-color: #000;
-    --text-color-light: #fff;
-    --text-large-font-size: calc(var(--base-font-size) * 1.25); // 20px
-    --background-color: #fff;
-    --dark-blue-grey-color: #1f2f57;
-    --brand-color: #00458b;
-    --page-header-background: #f5f5f5;
-    --page-header-border: #778492;
-    --activity-background: #DAE3E7;
-    --post-content-background: #FFFFFF;
-    --content-width: 960px; // Width of the content area
-    --on-mobile: 360px;
-    --on-palm: 767px;
-    --on-laptop: 992px;
+  --base-font-family: 'Open Sans', sans-serif;
+  --base-font-size: 16px;
+  --base-line-height: 1.375;
+  --base-font-weight: 300;
+  --alternate-font-family: 'Zilla Slab', serif;
+
+  --title-font-size: calc(var(--base-font-size) * 4);
+  --title-font-weight: 500;
+  --title-extra-extra-large-font-size: calc(var(--base-font-size) * 3);
+  --title-extra-large-font-size: calc(var(--base-font-size) * 2.25);
+  --title-large-font-size: calc(var(--base-font-size) * 1.75);
+  --title-medium-font-size: calc(var(--base-font-size) * 1.625);
+
+  --small-font-size: calc(var(--base-font-size) * 0.875);
+  --spacing-unit: 19px;
+  --grey-color: #828282;
+  --grey-color-very-light: #f0f0f0;
+  --grey-color-light: #dcdcdc;
+  --grey-color-dark: #4f4f4f;
+  --green-color: #005e5e;
+  --red-color: #ff4f5e;
+  --blue-color: #00ffff;
+  --purple-color: #9194b0;
+  --dark-color: #000000;
+  --text-color: #000;
+  --pumpkin-orange-color: #fb7000;
+  --ice-blue-color: #eaf4f4;
+  --indigo-blue-color: #4422a3;
+
+
+
+  --slate-grey-color: #5a6372;
+  --dark-blue-grey-color: #1f2f57;
+  --dark-grey-blue-color: #343d50;
+  --coral-color: #ff4642;
+
+  --button-color: #FC6413;
+
+
+  --text-color-light: #fff;
+  --text-large-font-size: calc(var(--base-font-size) * 1.625);
+  --text-lead-font-size: calc(var(--base-font-size) * 1.25);
+  --text-small-font-size: calc(var(--base-font-size) * 0.875);
+  --background-color: var(--ice-blue-color);
+
+  --brand-color: #00458b;
+  --page-header-background: #f5f5f5;
+  --page-header-border: #778492;
+  --activity-background: #DAE3E7;
+  --post-content-background: #FFFFFF;
+  --content-width: 960px;
+  --on-mobile: 360px;
+  --on-palm: 767px;
+  --on-laptop: 992px;
 }
 
 /**
@@ -53,14 +74,15 @@ dd,
 ol,
 ul,
 figure {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
+  font-weight: normal;
 }
 
 html,
 body {
-    height: 100%;
-    margin: 0;
+  height: 100%;
+  margin: 0;
 }
 
 /**
@@ -68,24 +90,20 @@ body {
  */
 
 body {
-    font-family: var(--base-font-family);
-    font-weight: var(--base-font-weight);
-    font-size: var(--base-font-size);
-    color: var(--text-color);
-    background-color: var(--background-color);
-    font-kerning: normal;
+  font-family: var(--base-font-family);
+  font-weight: var(--base-font-weight);
+  font-size: var(--base-font-size);
+  line-height: var(--base-line-height);
+  color: var(--text-color);
+  background-color: var(--background-color);
+  font-kerning: normal;
 }
 
 /**
  * Set `margin-bottom` to maintain vertical rhythm
  */
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
+
 p,
 blockquote,
 pre,
@@ -93,7 +111,7 @@ ul,
 ol,
 dl,
 figure {
-    margin-bottom: calc(var(--spacing-unit) / 2);
+  margin-bottom: calc(var(--spacing-unit) / 2);
 }
 
 /**
@@ -101,8 +119,8 @@ figure {
  */
 
 img {
-    max-width: 100%;
-    vertical-align: middle;
+  max-width: 100%;
+  vertical-align: middle;
 }
 
 /**
@@ -110,11 +128,11 @@ img {
  */
 
 figure>img {
-    display: block;
+  display: block;
 }
 
 figcaption {
-    font-size: var(--small-font-size);
+  font-size: var(--small-font-size);
 }
 
 /**
@@ -123,14 +141,14 @@ figcaption {
 
 ul,
 ol {
-    margin-left: var(--spacing-unit);
+  margin-left: var(--spacing-unit);
 }
 
 li {
-    >ul,
-    >ol {
-        margin-bottom: 0;
-    }
+>ul,
+>ol {
+  margin-bottom: 0;
+}
 }
 
 /**
@@ -138,13 +156,13 @@ li {
  */
 
 h1 {
-    font-family: 'Zilla Slab Highlight', sans-serif;
-    font-weight: 400;
+  font-family: 'Zilla Slab Highlight', sans-serif;
+  font-weight: 400;
 }
 
 h2 {
-    font-size: 3rem;
-    color: black;
+  font-size: 3rem;
+  color: black;
 }
 
 h2,
@@ -152,8 +170,8 @@ h3,
 h4,
 h5,
 h6 {
-    font-family: 'Zilla Slab', serif;
-    font-weight: 400;
+  font-family: 'Zilla Slab', serif;
+  font-weight: 400;
 }
 
 h1,
@@ -161,9 +179,8 @@ h3,
 h4,
 h5,
 h6 {
-    display: block;
-    margin: 0 0 12px 0;
-    line-height: 1;
+  display: block;
+  line-height: 1;
 }
 
 /**
@@ -171,20 +188,20 @@ h6 {
  */
 
 a {
-    color: var(--brand-color);
-    text-decoration: none;
-    font-weight: bold;
+  color: var(--brand-color);
+  text-decoration: none;
+  font-weight: bold;
 }
 
 a:focus,
 a:active {
-    text-decoration: none;
-    color: var(--brand-color);
+  text-decoration: none;
+  color: var(--brand-color);
 }
 
 a:hover {
-    color: var(--brand-color);
-    text-decoration: none;
+  color: var(--brand-color);
+  text-decoration: none;
 }
 
 /**
@@ -192,16 +209,16 @@ a:hover {
  */
 
 blockquote {
-    color: var(--grey-color);
-    border-left: 4px solid var(--grey-color-light);
-    padding-left: calc(var(--spacing-unit) / 2);
-    font-size: 18px;
-    letter-spacing: -1px;
-    font-style: italic;
+  color: var(--grey-color);
+  border-left: 4px solid var(--grey-color-light);
+  padding-left: calc(var(--spacing-unit) / 2);
+  font-size: 18px;
+  letter-spacing: -1px;
+  font-style: italic;
 }
 
 blockquote::last-child {
-    margin-bottom: 0;
+  margin-bottom: 0;
 }
 
 /**
@@ -210,63 +227,111 @@ blockquote::last-child {
 
 pre,
 code {
-    font-size: 15px;
-    border: 1px solid var(--grey-color-light);
-    border-radius: 3px;
-    background-color: #eef;
+  font-size: 15px;
+  border: 1px solid var(--grey-color-light);
+  border-radius: 3px;
+  background-color: #eef;
 }
 
 code {
-    padding: 1px 5px;
+  padding: 1px 5px;
 }
 
 pre {
-    padding: 8px 12px;
-    overflow-x: auto;
+  padding: 8px 12px;
+  overflow-x: auto;
 }
 
 pre code {
-    border: 0;
-    padding-right: 0;
-    padding-left: 0;
+  border: 0;
+  padding-right: 0;
+  padding-left: 0;
 }
+
+/**
+ * 1. Change the font styles in all browsers.
+ * 2. Remove the margin in Firefox and Safari.
+ */
+
+ button,
+ input,
+ optgroup,
+ select,
+ textarea {
+   font-family: inherit; /* 1 */
+   font-size: 100%; /* 1 */
+   line-height: 1.15; /* 1 */
+   margin: 0; /* 2 */
+ }
+
+ /**
+  * Show the overflow in IE.
+  * 1. Show the overflow in Edge.
+  */
+
+ button,
+ input { /* 1 */
+   overflow: visible;
+ }
+
+ /**
+  * Remove the inheritance of text transform in Edge, Firefox, and IE.
+  * 1. Remove the inheritance of text transform in Firefox.
+  */
+
+ button,
+ select { /* 1 */
+   text-transform: none;
+ }
+
+ /**
+  * Correct the inability to style clickable types in iOS and Safari.
+  */
+
+ button,
+ [type="button"],
+ [type="reset"],
+ [type="submit"] {
+   -webkit-appearance: button;
+ }
+
 
 /**
  * Wrapper
  */
 
 .wrapper {
-    margin-right: auto;
-    margin-left: auto;
-    padding: var(--spacing-unit) var(--spacing-unit);
+  margin-right: auto;
+  margin-left: auto;
+  padding: var(--spacing-unit) var(--spacing-unit);
 }
 
 @media all and (max-width: var(--on-laptop)) {
-    .wrapper {
-        padding-right: calc(var(--spacing-unit) / 2);
-        padding-left: calc(var(--spacing-unit) / 2);
-    }
+  .wrapper {
+    padding-right: calc(var(--spacing-unit) / 2);
+    padding-left: calc(var(--spacing-unit) / 2);
+  }
 }
 
 @media all and (max-width: var(--on-laptop)) {
-    wrapper .trigger {
-        background-color: var(--brand-color);
-        z-index: 99;
-        width: 150px;
-        border: none;
-        position: absolute;
-        right: 0px;
-        top: 58px;
-        margin-right: 0;
-        border: none;
-        border-top-color: var(--brand-color) !important;
-    }
+  wrapper .trigger {
+    background-color: var(--brand-color);
+    z-index: 99;
+    width: 150px;
+    border: none;
+    position: absolute;
+    right: 0px;
+    top: 58px;
+    margin-right: 0;
+    border: none;
+    border-top-color: var(--brand-color) !important;
+  }
 }
 
 .wrapper:after {
-    content: "";
-    display: table;
-    clear: both;
+  content: "";
+  display: table;
+  clear: both;
 }
 
 /**
@@ -274,46 +339,52 @@ pre code {
  */
 
 .icon svg {
-    display: inline-block;
-    width: 16px;
-    height: 16px;
-    vertical-align: middle;
+  display: inline-block;
+  width: 16px;
+  height: 16px;
+  vertical-align: middle;
 }
 
 .icon svg path {
-    fill: var(--grey-color);
+  fill: var(--grey-color);
 }
 
 /*
  * Others
  */
 
- .full-width {
-    margin: 0 5vw;
-}
-
-.button {
-    padding: 10px 20px;
-    cursor: pointer;
-}
-
-.button-white {
-    text-color: var(--brand-color);
-    background-color: white;
-}
-
-.button-transparent {
-    text-color: var(--dark-color);
-    background-color: transparent;
-    border: 1px var(--dark-color) solid;
-}
-
-.button-white:hover,
-.button-transparent:hover {
-    background-color: var(--grey-color-very-light);
+.full-width {
+  margin: 0 5vw;
 }
 
 .content-center {
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
+}
+
+/**
+ * Hide elements from all users.
+ *
+ * Used for elements which should not be immediately displayed to any user. An
+ * example would be a collapsible fieldset that will be expanded with a click
+ * from a user. The effect of this class can be toggled with the jQuery show()
+ * and hide() functions.
+ */
+.element-hidden {
+  display: none;
+}
+
+/**
+  * Hide elements visually, but keep them available for screen-readers.
+  *
+  * Used for information required for screen-reader users to understand and use
+  * the site where visual display is undesirable. Information provided in this
+  * manner should be kept concise, to avoid unnecessary burden on the user. Must
+  * not be used for focusable elements (such as links and form elements) as this
+  * causes issues for keyboard only or voice recognition users.
+  */
+.element-invisible {
+  height: 0;
+  overflow: hidden;
+  position: absolute;
 }
