--- a/src/components/Activities/ActivitiesList.css
+++ b/src/components/Activities/ActivitiesList.css
@@ -4,10 +4,6 @@
   justify-content: center;
 }
 
-h1 {
-  text-align: center;
-}
+.activities__listing {
 
-.activities {
-  margin-bottom: 10vh;
 }
