--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,65 +1,92 @@
 .navbar-default {
-    color: #000;
-    min-height: 75px;
-    border-bottom: 5px var(--brand-color) solid;
+  min-height: 75px;
+  background-color: var(--dark-blue-grey-color);
+  background-image: linear-gradient(261deg, var(--indigo-blue-color), var(--dark-blue-grey-color));
 }
 
-img.brand {
-    width: 100px;
-    max-width: 200px;
-    margin: 7px 50px 10px 0;
+img.logo {
+  max-width: 157px;
 }
 
 .navbar {
-    margin-bottom: 0;
+  margin-bottom: 0;
 }
 
 .navbar-nav {
-    margin: 10px;
+  margin: 10px;
 }
 
 .nav > li > a {
-    display: inline-block;
+  display: inline-block;
 }
 
 .navbar-brand {
-    padding: 15px 0 15px 15px;
+  padding: 15px 0 15px 15px;
 }
 
+.header {
+
+}
 .navbar-default {
-    border-radius: 0;
+  border-radius: 0;
 }
 
 /* Mobile toggle button */
 .navbar-default .navbar-toggle {
-    border: 0;
-    margin: 15px;
+  border: 0;
+  margin: 15px;
 }
 
 .navbar-default .navbar-toggle:hover,
 .navbar-default .navbar-toggle:focus {
-    background: none;
+  background: none;
 }
 
-.navbar-default .navbar-nav > li > a,
+.navbar-default .navbar-nav {
+  margin: 0;
+}
+
+.navbar-default .navbar-nav > li {
+  float: none;
+}
+
+.navbar-default .navbar-nav > li > a {
+  font-size: 16px;
+  font-weight: bold;
+  text-transform: uppercase;
+  color: white;
+  position: relative;
+  text-shadow: none;
+  padding: 0 15px;
+}
+
 .navbar-default .navbar-nav > li > a:active,
 .navbar-default .navbar-nav > li > a:focus {
-    font-size: 16px;
-    font-weight: bold;
-    text-transform: uppercase;
-    color: var(--brand-color);
-    padding-bottom: 10px;
+  color: white;
+}
+
+.navbar-default .navbar-nav > li > a::after {
+  content: '';
+  width: auto;
+  height: 4px;
+  background-color: transparent;
+  border-radius: 2px;
+  display: block;
+  transition: background-color .5s;
+  margin-top: 1px;
 }
 
 .navbar-default .navbar-nav > li > a:hover {
-    color: var(--brand-color);
-    border-bottom: 2px solid var(--brand-color);
-    box-shadow: inset 0 -2px 0 var(--brand-color);
+  color: white;
+}
+
+.navbar-default .navbar-nav > li > a:hover::after {
+  background-color: var(--coral-color);
 }
 
 /* Phones */
 @media only screen and (max-width : 400px) {
-    img.brand {
-        max-width: 180px;
-    }
+  img.brand {
+
+  }
 }
