--- a/src/components/NewsletterForm.css
+++ b/src/components/NewsletterForm.css
@@ -1,17 +1,34 @@
+.newsletter {
+}
+
 .newsletter__privacy-policy {
 
 }
 
-.newsletter__email {
-  display: flex;
-}
-.newsletter__email .form_input{
-  flex-grow: 2;
-  padding: 0 20px;
+.newsletter__header {
+  max-width: 540px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 35px;
 }
 
-.newsletter__thanks {
-  display: none;
+.newsletter__header .text {
+  opacity: .8;
+}
+
+.newsletter__email {
+  display: flex;
+  margin-bottom: 30px;
+}
+
+.newsletter__email {
+}
+
+.newsletter__email .form_input {
+  flex-grow: 2;
+  padding: 0 20px;
+  border-radius: 4px 0 0 4px;
+  box-shadow: 0;
 }
 
 .newsletter__errors {
@@ -26,6 +43,7 @@
   font-size: 26px;
   line-height: 24px;
   font-weight: normal;
+  background-color: var(--pumpkin-orange-color);
 }
 .newsletter__subscribe-icon {
   padding-left: 10px;
