--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,8 @@
 html {
   height: 100%;
   box-sizing: border-box;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 body {
