Style subscribe to newsletter on desktop.

--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -9,6 +9,7 @@ hr {
   padding-top: 30px;
   padding-bottom: 30px;
   position: relative;
+  overflow: hidden;
 }
 
 .home__illustrated-slice:before {
