--- a/src/components/Campaigns/CampaignTile.css
+++ b/src/components/Campaigns/CampaignTile.css
@@ -5,6 +5,7 @@
   background-color: #ffffff;
   box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.15);
   padding: 30px;
+  min-height: 100%;
 }
 
 .campaign-card__container {
