--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,14 +1,17 @@
-/*
-TODO, add front-page special handling
-*/
-.is-front {
-
+.is-front .navbar-default{
+  background: none;
+  position: absolute;
+  width:100%;
+  left: 0;
+  top: 0;
 }
 
 .navbar-default {
   min-height: 75px;
   background-color: var(--dark-blue-grey-color);
   background-image: linear-gradient(261deg, var(--indigo-blue-color), var(--dark-blue-grey-color));
+  box-shadow: none;
+  border: none;
 }
 
 img.logo {
