--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -7,7 +7,7 @@ hr {
 .home__illustrated-slice {
   background-color: var(--illustrated-slice-background);
   padding-top: 30px;
-  padding-bottom: 30px;
+  padding-bottom: 50px;
   position: relative;
   overflow: hidden;
 }
@@ -18,7 +18,7 @@ hr {
   width: 382px;
   height: 286px;
   background-image: url('/images/illustration_left.png');
-  top: 78px;
+  top: 27px;
   right: 50%;
   left: auto;
   position: absolute;
@@ -32,8 +32,16 @@ hr {
   width: 352px;
   height: 272px;
   background-image: url('/images/illustration_right.png');
-  top: 78px;
+  top: 27px;
   left: 50%;
   position: absolute;
   transform: translateX(255px);
+}
+
+.home__illustrated-slice--large:before {
+  top: 78px;
+}
+
+.home__illustrated-slice--large:after {
+  top: 78px;
 }
