Theme header and mobile menu. Desktop menu needs some work.

--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,7 @@
   --green-color: #005e5e;
   --red-color: #ff4f5e;
   --blue-color: #00ffff;
+  --blue-medium-color: #261e61;
   --purple-color: #9194b0;
   --dark-color: #000000;
   --text-color: #000;
