--- a/src/components/Campaigns/CampaignTile.css
+++ b/src/components/Campaigns/CampaignTile.css
@@ -1,6 +1,6 @@
 .campaign-card {
   text-align: left;
-  border: 1px solid var(--grey-color-light);
+  /*border: 1px solid var(--grey-color-light);*/
   border-radius: 4px;
   background-color: #ffffff;
   box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.15);
