--- a/src/section.css
+++ b/src/section.css
@@ -1,3 +1,9 @@
-.section--centered {
+.section--pull-up {
+  margin-top: -50px;
+}
 
+@media all and (min-width: 768px) {
+  .section--pull-up {
+    margin-top: -180px;
+  }
 }
