--- a/src/components/NewsletterForm.css
+++ b/src/components/NewsletterForm.css
@@ -217,3 +217,72 @@
 .newsletter--illustrated .newsletter__subscribe-icon {
   padding-left: 10px;
 }
+
+
+/* Footer Variant */
+.newsletter--footer {
+  margin-top: 10px;
+}
+
+.newsletter--footer .newsletter__email,
+.newsletter--footer .newsletter__select {
+  margin-bottom: 15px;
+}
+
+.newsletter--footer .newsletter__details {
+  margin-bottom: 0;
+}
+
+.newsletter--footer .newsletter__privacy-policy label {
+  color: white;
+  text-align: left;
+}
+
+.newsletter--footer .newsletter__privacy-policy label a{
+  color: white;
+}
+
+.newsletter--footer .newsletter__email .form_input {
+  font-size: var(--small-font-size);
+  line-height: var(--base-line-height);
+  border-color: var(--grey-color-medium);
+  color: var(--grey-color-medium);
+  padding: 5px 17px;
+}
+
+.newsletter--footer .newsletter__select select.is-placeholder {
+  color: var(--grey-color-medium);
+}
+
+.newsletter--footer .newsletter__select select {
+  display: inline-block;
+  font-size: var(--small-font-size);
+  line-height: var(--base-line-height);
+  padding: 8px 40px 8px 17px;
+  color: var(--dark-grey-blue-color);
+  border-color: var(--grey-color-medium);
+}
+
+.newsletter--footer .newsletter__select:after {
+  top: 12px;
+  right: 14px;
+  border-color: transparent var(--grey-color-medium) var(--grey-color-medium) transparent;
+}
+
+.newsletter--footer .newsletter__select:before {
+  right: 37px;
+  background: var(--grey-color-medium);
+}
+
+.newsletter__subscribe--small {
+  background-color: var(--grey-color-medium);
+  width: 140px;
+  padding: 8px 17px;
+  text-transform: none;
+}
+
+.newsletter__subscribe--small .newsletter__subscribe-icon {
+  margin-left: 8px;
+  position: relative;
+  top: 2px;
+}
