--- a/src/components/NewsletterForm.css
+++ b/src/components/NewsletterForm.css
@@ -182,7 +182,6 @@
   box-shadow: none;
   border-radius: 0;
   padding: 0 0 27px;
-
 }
 
 .newsletter--illustrated .newsletter__email .form_input {
@@ -248,6 +247,22 @@
   border-color: var(--grey-color-medium);
   color: var(--grey-color-medium);
   padding: 5px 17px;
+}
+
+@media all and (min-width: 576px) {
+  .newsletter--footer .newsletter__details {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 24px;
+  }
+}
+
+@media all and (min-width: 576px) {
+  .newsletter--footer .newsletter__select {
+    position: relative;
+    display: inline-block;
+    width: 48%;
+  }
 }
 
 .newsletter--footer .newsletter__select select.is-placeholder {
