--- a/src/components/Activities/ActivityTile.css
+++ b/src/components/Activities/ActivityTile.css
@@ -26,8 +26,13 @@
 .activity-card header {
   margin-right: -20px;
   margin-left: -20px;
-  display: flex;
-  justify-content: center;
+}
+
+@media only screen and (min-width : 576px) {
+  .activity-card header {
+    display: flex;
+    justify-content: center;
+  }
 }
 
 .activity-card header img {
