--- a/src/components/FAQ.css
+++ b/src/components/FAQ.css
@@ -6,8 +6,14 @@
   border-radius: 4px;
   background-color: #ffffff;
   box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.15);
-  padding: 30px;
+  padding: 10px;
   min-height: 100%;
+}
+
+@media only screen and (min-width : 768px) {
+  .faq-section {
+    padding: 30px;
+  }
 }
 
 .faq-section__title {
@@ -19,17 +25,18 @@
 
 .faq-sub-section__title {
   margin-bottom: var(--base-font-size);
+  display: table;
 }
 
 .faq-title__icon {
-  display:inline-block;
+  display: table-cell;
   vertical-align: middle;
   padding-right: 5px;
 }
 
 .faq-sub-section__title h2{
   margin: 0;
-  display:inline-block;
+  display: table-cell;
   vertical-align: middle;
   font-weight: 700;
   font-family: var(--base-font-family);
